--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "hastle",
   "homepage": "https://Muneermadprit.github.io/hastle",
-
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -18,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "taos": "^1.0.5",
