--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "taos": "^1.0.5",
     "tw-elements": "^2.0.0"
