--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
