--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "aos": "^2.3.4",
+    "apexcharts": "^3.52.0",
+    "axios": "^1.7.4",
     "lottie-web": "^5.12.2",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "taos": "^1.0.5",
     "tw-elements": "^2.0.0"
