--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-type-animation": "^3.2.0",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "taos": "^1.0.5",
     "tw-elements": "^2.0.0"
   },
