--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "aos": "^2.3.4",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
+    "chart.js": "^4.4.3",
     "lottie-web": "^5.12.2",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
