--- a/server/.env
+++ b/server/.env
@@ -17,7 +17,8 @@ FIREBASE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_CLIENT_X509_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-hwuwt%40holisticcareservice-516a0.iam.gserviceaccount.com
 UNIVERSE_DOMAIN=googleapis.com
-
+EMAIL_USER=muneerbnglr@gmail.com
+EMAIL_PASSWORD=rbap qmwf trxy fywk
 
 
 
