--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- 
   "scripts": {
-  "start": "node index.js",
-  "dev": "nodemon index.js",
-  "test": "mocha"
-},
- "keywords": [],
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "mocha"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -23,6 +22,7 @@
     "firebase-admin": "^12.1.1",
     "ipfs-http-gateway": "0.9.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
